k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: jgil.dev
      http:
        paths:
          - path: /api/v1/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 3000
